crates/plotnik-tests/tests/03-analyze/alternations/mixed_reported_per_alternation.txt
Q = (foo
  [
    A: (a)
    (b)
  ]
  [
    C: (c)
    (d)
  ]
)
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - labeled alternative here
4 |     (b)
  |     ^^^
  |
help: either label every alternative or remove all labels

error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:8:5
  |
7 |     C: (c)
  |     - labeled alternative here
8 |     (d)
  |     ^^^
  |
help: either label every alternative or remove all labels
------------------ DEFINITIONS -------------------
